Adicionei um parágrafo

--- a/Site-Exemplo/index.html
+++ b/Site-Exemplo/index.html
@@ -9,5 +9,6 @@
    <h1>Olá, Mundo!!!</h1> 
    <hr>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam atque non iusto, quae ducimus ut quis, asperiores aliquam natus dolore quisquam omnis provident, hic repellendus aliquid corrupti repellat. Quisquam, rem.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, consequatur exercitationem dignissimos, quia fugit asperiores, deleniti adipisci dolore distinctio nam iure culpa! Animi rerum ullam facilis exercitationem. Cupiditate, laborum obcaecati.</p>
 </body>
 </html>
